--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -10,6 +10,7 @@
     justify-content:space-between;
     z-index: 100;
     backdrop-filter: 50px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 .logo{
