--- a/resources/sass/_lomasvisto.scss
+++ b/resources/sass/_lomasvisto.scss
@@ -1,5 +1,5 @@
 .LoMasVisto{
-    background-color: antiquewhite;
+    //background-color: antiquewhite;
     margin-bottom: 80px;
     margin-top: 80px;
 }
@@ -12,7 +12,7 @@
 }
 .Vinculos-MasVistos{
     padding-top: 20px;
-    background-color: azure;
+    //background-color: azure;
     margin-left: 50px;
     padding-right: 50px;
 }
@@ -32,7 +32,7 @@
 }
 .Notas-MasVistos{
     margin-left: 50px;
-    background-color:aliceblue;
+    //background-color:aliceblue;
 }
 .Individual-MasVistos{
     width: 350px;
@@ -42,7 +42,7 @@
 .Titulo-MasVistos a{
     text-decoration: none;
     color: black;
-    font-family: "Linden Hill", serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 20px;
 }
 .Descripcion-MasVistos{
