--- a/resources/sass/_navbar.scss
+++ b/resources/sass/_navbar.scss
@@ -17,6 +17,7 @@
 }
 .bi-nav{
     margin-left: 15px;
+    color: rgb(250, 71, 71);
     
 }
 .etiquetas-navbar{
@@ -27,6 +28,8 @@
     margin: 10px;
     text-decoration: none;
     color:black;
+    font-family: "Martel", serif;
+    font-size: 14px;
 }
 .etiquetas-navbar :hover{
     color: rgb(191, 89, 89);
