--- a/resources/sass/_seccionado.scss
+++ b/resources/sass/_seccionado.scss
@@ -6,11 +6,10 @@
 }
 .tituloseccion{
     margin-left: 70px;
-    font-family: "Linden Hill", serif;
+    font-family: "Open Sans", sans-serif;
     font-size: 30px;
     color: red;
 }
-
 .seccionado-contenedor{
     display: flex;
     justify-content: space-between;
@@ -27,7 +26,7 @@
     display: flex;
     flex-direction: column; 
     align-items: center;
-    font-family: "Linden Hill", serif;
+    font-family: "Open Sans", sans-serif;
     text-decoration: none;
     font-size: 20px;
     color: rgb(0, 0, 0);
