--- a/resources/sass/_notamuestra.scss
+++ b/resources/sass/_notamuestra.scss
@@ -14,11 +14,13 @@
 .masreciente-titulo{
     width: 400px; 
     height: 40px; 
-    font-size: 20px;
+    
 }
 .masreciente-titulo a{
     text-decoration: none;
     color: black;
+    font-size: 20px;
+    font-family: "Open Sans", sans-serif;
 }
 .masreciente-descripcion{
     width: 400px; 
