--- a/resources/sass/_secdeldia.scss
+++ b/resources/sass/_secdeldia.scss
@@ -1,5 +1,5 @@
 .secdeldia{
-    padding-top: 100px;
+    padding-top: 20px;
     justify-content: space-between;
     margin: 20px;
     display: flex;
@@ -17,6 +17,24 @@
 .Titulo-secundario{
     width: 400px;
     height: 20px;
+    padding-left: 10px;
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+}
+.Titulo-secundario a{
+    text-decoration: none;
+    color: black;
+    font-family: "Open Sans", sans-serif;
+    font-size: 14px;
+}
+.Titulo-principal{
+    padding-left: 10px;
+}
+.Titulo-principal a{
+    text-decoration: none;
+    color: black;
+    font-family: "Open Sans", sans-serif;
+    font-size: 18px;
 }
 @media (max-width: 1290px) {
     .secdeldia{
