--- a/resources/sass/_secdeldia.scss
+++ b/resources/sass/_secdeldia.scss
@@ -5,14 +5,22 @@
     display: flex;
 }
 .foto-principal{
-    border:1px solid black;
+    //border:1px solid black;
     width: 800px;
     height: 420px;
+}
+.foto-principal img{
+    width: 100%;
+    height: 100%;
 }
 .foto-secundaria{
     border:1px solid black;
     width: 450px;
     height: 200px;
+}
+.foto-secundaria img{
+    width: 100%;
+    height: 100%;
 }
 .Titulo-secundario{
     width: 400px;
