--- a/resources/sass/_notamuestra.scss
+++ b/resources/sass/_notamuestra.scss
@@ -9,12 +9,16 @@
 .masreciente-imagen{
     width: 400px;
     height: 280px;
-    border: 1px solid black;
+    //border: 1px solid black;
+}
+.masreciente-imagen img{
+    width: 100%;
+    height: 100%;
 }
 .masreciente-titulo{
+    //background-color: red;
     width: 400px; 
-    height: 40px; 
-    
+    height: 80px; 
 }
 .masreciente-titulo a{
     text-decoration: none;
@@ -40,16 +44,17 @@
     .masreciente-descripcion{
         width: 370px; 
         height: 130px;
+        background-color: aqua;
     }
     .masreciente-imagen{
         width: 370px;
         height: 270px;
-        border: 1px solid rgb(255, 0, 0);
     }
     .masreciente-titulo{
         width: 370px; 
-        height: 40px; 
+        height: 70px; 
         font-size: 20px;
+        background-color: antiquewhite;
     }
 }
 @media (max-width: 1140px){
@@ -65,7 +70,7 @@
     }
     .masreciente-titulo{
         width: 340px; 
-        height: 40px; 
+        height: 70px; 
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -85,7 +90,7 @@
     }
     .masreciente-titulo{
         width: 310px; 
-        height: 40px; 
+        height: 60px; 
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -105,7 +110,7 @@
     }
     .masreciente-titulo{
         width: 280px; 
-        height: 40px; 
+        height: 60px; 
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -125,7 +130,7 @@
     }
     .masreciente-titulo{
         width: 280px; 
-        height: 40px; 
+        height: 70px; 
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -147,8 +152,8 @@
         border: 1px solid rgb(21, 197, 53);
     }
     .masreciente-titulo{
-        width: 230px; 
-        height: 40px; 
+        width: 350px; 
+        height: 70px; 
         font-size: 20px;
     }
     .masreciente-individual{
