Notas individuales funcionando

--- a/resources/sass/_noticiaC.scss
+++ b/resources/sass/_noticiaC.scss
@@ -14,6 +14,14 @@
     width: 600px;
     height: 300px;
 }
+.imagenC img{
+    border: 1px solid black;
+    width: 600px;
+    height: 300px;
+}
+.descripcion h2{
+    height: auto;
+}
 .mas{
     border: 1px solid black;
     width: 350px;
