--- a/resources/sass/_notamuestra.scss
+++ b/resources/sass/_notamuestra.scss
@@ -18,7 +18,7 @@
 .masreciente-titulo{
     //background-color: red;
     width: 400px; 
-    height: 80px; 
+    height: auto; 
 }
 .masreciente-titulo a{
     text-decoration: none;
@@ -44,7 +44,7 @@
     .masreciente-descripcion{
         width: 370px; 
         height: 130px;
-        background-color: aqua;
+        
     }
     .masreciente-imagen{
         width: 370px;
@@ -52,25 +52,23 @@
     }
     .masreciente-titulo{
         width: 370px; 
-        height: 70px; 
+         
         font-size: 20px;
-        background-color: antiquewhite;
+        
     }
 }
 @media (max-width: 1140px){
     .masreciente-descripcion{
         width: 340px; 
         height: 100px;
-        //margin: 10px;
-    }
+            }
     .masreciente-imagen{
         width: 340px;
         height: 250px;
-        border: 1px solid rgb(0, 255, 60);
-    }
+            }
     .masreciente-titulo{
         width: 340px; 
-        height: 70px; 
+        //height: 70px; 
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -86,11 +84,11 @@
     .masreciente-imagen{
         width: 310px;
         height: 230px;
-        border: 1px solid rgb(47, 0, 255);
+        
     }
     .masreciente-titulo{
         width: 310px; 
-        height: 60px; 
+        
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -106,11 +104,11 @@
     .masreciente-imagen{
         width: 280px;
         height: 200px;
-        border: 1px solid rgb(47, 0, 255);
+        
     }
     .masreciente-titulo{
         width: 280px; 
-        height: 60px; 
+        
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -126,11 +124,11 @@
     .masreciente-imagen{
         width: 260px;
         height: 160px;
-        border: 1px solid rgb(47, 0, 255);
+        
     }
     .masreciente-titulo{
         width: 280px; 
-        height: 70px; 
+        
         font-size: 20px;
     }
     .masreciente-descripcion{ 
@@ -149,11 +147,11 @@
     .masreciente-imagen{
         width: 400px;
         height: 160px;
-        border: 1px solid rgb(21, 197, 53);
+        
     }
     .masreciente-titulo{
         width: 350px; 
-        height: 70px; 
+        
         font-size: 20px;
     }
     .masreciente-individual{
